# Weaver

./: .gitignore
backend/: Dockerfile  Makefile  OAUTH_API_README.md  README.md  config.py  docker-compose.yml  elastic.py  elastic_fleet.py  env(example)  main.py  model_config.py  pyproject.toml  seed_api.py  weaver.postman_collection.json
backend/agents/: __init__.py  models.py  router.py
backend/auth/: google_oauth.py  router.py  token_store.py
backend/drive/: router.py  service.py
backend/ingest/: chunkers.py  router.py
backend/scripts/: auth_and_sync.py  download.py  google_auth_client.py  test_elastic.py  test_oauth_api.py
backend/search/: router.py
desktop/: electron.vite.config.ts  package-lock.json  package.json  tsconfig.json
desktop/src/main/: icon.ts  index.ts  tray.ts
desktop/src/preload/: index.ts
desktop/src/renderer/: App.tsx  env.d.ts  index.html  main.tsx  styles.css
desktop/src/renderer/components/: AssistantTab.tsx  CodeBlock.tsx  IngestTab.tsx
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.tsx  styles.css
frontend/src/services/: api.ts
vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: applyService.ts  bridgeServer.ts  chatPanel.ts  contextExtractor.ts  extension.ts  inlineCompletionProvider.ts  panel.ts  searchClient.ts
workspace-addon/: .clasp.json  .claspignore  README.md  package-lock.json  package.json  tsconfig.json
workspace-addon/src/: Code.ts  appsscript.json  sidebar.html
(+2 files in other folders)
