[tool.poetry]
name = "elastic"
version = "0.1.0"
description = "Elastic Hackathon"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
openai = "*"
python-dotenv = "*"
openai-agents = "*"
pydantic = "*"
pydantic-settings = "*"
pyyaml = "*"
types-pyyaml = "^6.0.12.20250915"
pytest = "^9.0.2"
google-api-python-client = "^2.192.0"
google-auth-oauthlib = "^1.3.0"
google-auth = "^2.49.0"
fastapi = "^0.135.1"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
elasticsearch = "^9.3.0"
pypdf = "^6.8.0"
httpx = "^0.28.0"
python-multipart = "^0.0.20"
python-docx = "^1.1.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
